# myme

./: .gitignore  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_SUMMARY.md  BUILD.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  DEVELOPMENT.md  GODO_INTEGRATION.md  GODO_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE_1_COMPLETE.md  PHASE_2_STARTED.md  PROJECT_STATUS.md  QT_INSTALLATION.md  QUICKSTART.md  README.md  Taskfile.yml  WINDOWS_BUILD_FIX.md  build-qt.ps1  build.ps1  check-files.ps1  clippy.toml  fix-linker.ps1  qml.qrc  rustfmt.toml  set-qt-env.ps1  setup-dev-env.ps1  setup-qt-env.ps1  verify-architecture.ps1
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.cursor/skills/cleaning-up-codebases/: SKILL.md
.github/: release.yml
.github/workflows/: ci.yml  release.yml
crates/myme-auth/: Cargo.toml
crates/myme-auth/src/: github.rs  google.rs  lib.rs  oauth.rs  storage.rs
crates/myme-calendar/: Cargo.toml
crates/myme-calendar/src/: cache.rs  client.rs  error.rs  lib.rs  types.rs
crates/myme-core/: Cargo.toml
crates/myme-core/src/: app.rs  config.rs  error.rs  lib.rs  plugin.rs  repo_op_state.rs
crates/myme-gmail/: Cargo.toml
crates/myme-gmail/src/: cache.rs  client.rs  error.rs  lib.rs  sync.rs  types.rs
crates/myme-integrations/: Cargo.toml
crates/myme-integrations/src/: lib.rs  repo.rs  repo_url.rs
crates/myme-integrations/src/git/: mod.rs
crates/myme-integrations/src/github/: mod.rs
crates/myme-services/: Cargo.toml
crates/myme-services/src/: github.rs  lib.rs  note_backend.rs  note_client.rs  note_migrate.rs  note_store.rs  project.rs  project_store.rs  retry.rs  todo.rs
crates/myme-services/tests/: github_integration.rs  todo_integration.rs
crates/myme-ui/: .qmlls.ini  Cargo.toml  build.rs
crates/myme-ui/qml/: AppContext.qml  Icons.qml  Main-kirigami.qml  Main.qml  Responsive.qml  Theme.qml  qmldir
crates/myme-ui/qml/components/: CalendarWidget.qml  ColorPicker.qml  EmailWidget.qml  NoteCard.qml  QuickAddBar.qml  RepoCard.qml  Sidebar.qml  WeatherCompact.qml  WeatherWidget.qml  qmldir
crates/myme-ui/qml/myme_ui/: qmldir
crates/myme-ui/qml/pages/: CalendarPage.qml  DevToolsPage.qml  GmailPage.qml  NotePage.qml  ProjectDetailPage.qml  ProjectsPage.qml  RepoPage.qml  SettingsPage.qml  TodoPage.qml  WeatherPage.qml  WelcomePage.qml  WorkflowsPage.qml
crates/myme-ui/src/: app_services.rs  bridge.rs  lib.rs
crates/myme-ui/src/error_mapping/: auth.rs  calendar.rs  gmail.rs  kanban.rs  mod.rs  note.rs  project.rs  repo.rs  weather.rs  workflow.rs
crates/myme-ui/src/models/: auth_model.rs  calendar_model.rs  encoding_model.rs  gmail_model.rs  google_auth_model.rs  hash_model.rs  json_model.rs  jwt_model.rs  kanban_model.rs  mod.rs  note_model.rs  project_model.rs  repo_model.rs  simple_test.rs  test_simple.rs  time_model.rs  todo_model.rs  uuid_model.rs  weather_model.rs  workflow_model.rs
crates/myme-ui/src/services/: auth_service.rs  calendar_service.rs  gmail_service.rs  google_common.rs  kanban_service.rs  mod.rs  note_service.rs  project_service.rs  repo_service.rs  weather_service.rs  workflow_service.rs
crates/myme-weather/: Cargo.toml
crates/myme-weather/src/: cache.rs  geocode.rs  lib.rs  location.rs  provider.rs  types.rs
docs/plans/: 2026-01-20-location-weather-design.md  2026-01-20-location-weather-implementation.md  2026-01-21-devtools-expansion-design.md  2026-01-21-devtools-expansion.md  2026-01-21-projects-feature-design.md  2026-01-21-projects-implementation.md  2026-02-01-google-integration-design.md  2026-02-01-google-integration-implementation.md  2026-02-03-github-releases-design.md  2026-02-03-github-releases-implementation.md
installer/: myme.iss
mcp-server/: README.md  package-lock.json  package.json
mcp-server/prompts/: add-new-service-client.md  add-new-ui-page.md  add-oauth-provider.md
mcp-server/resources/: pages-checklist.md  project-context.md  theme-reference.md
mcp-server/src/: config.ts  index.ts  prompts.ts  resources.ts
mcp-server/src/tools/: build.ts  crates.ts  qml-format.ts
mcp-server/src/utils/: exec.ts  paths.ts  readFile.ts
qt-main/: main.cpp
scripts/: build-rust.ps1  build.ps1  fix-linker.ps1  setup-dev-env.ps1  setup-qt-env.ps1
src/: main.rs
