[workspace]
members = [
    "crates/myme-core",
    "crates/myme-ui",
    "crates/myme-services",
    "crates/myme-auth",
    "crates/myme-integrations",
    "crates/myme-weather",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MyMe Contributors"]

[workspace.dependencies]
# Core
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP & Services
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# cxx-qt
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }

[package]
name = "myme"
version.workspace = true
edition.workspace = true

[dependencies]
myme-core = { path = "crates/myme-core" }
myme-ui = { path = "crates/myme-ui" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
