[workspace]
members = [
    "crates/myme-core",
    "crates/myme-ui",
    "crates/myme-services",
    "crates/myme-auth",
    "crates/myme-integrations",
    "crates/myme-weather",
    "crates/myme-gmail",
    "crates/myme-calendar",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MyMe Contributors"]

[workspace.dependencies]
# Core
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

# HTTP & Services
reqwest = { version = "0.12", features = ["json", "native-tls"] }
url = "2.5"

# Security
keyring = "2"

# cxx-qt
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
unused_mut = "deny"
dead_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
# Correctness
clippy::unwrap_used = "deny"
clippy::expect_used = "deny"
clippy::panic = "deny"
clippy::todo = "deny"
# Style
clippy::needless_borrow = "deny"
clippy::needless_lifetimes = "deny"
clippy::clone_on_copy = "deny"
# Ergonomics
clippy::must_use_candidate = "warn"
clippy::missing_errors_doc = "warn"
# Noise
clippy::module_name_repetitions = "allow"
clippy::too_many_arguments = "allow"
clippy::large_enum_variant = "allow"
