[package]
name = "myme-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Config management
config = "0.14"
dirs = "5.0"
toml = "0.8"
