[package]
name = "myme-services"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
