[package]
name = "myme-services"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
url.workspace = true

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# SQLite for local storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Mutex for thread-safe SQLite access
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
