[package]
name = "myme-ui"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# cxx-qt for Qt/QML integration
cxx = "1.0"
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["qt_full"] }

# Internal crates
myme-services = { path = "../myme-services" }
myme-auth = { path = "../myme-auth" }
myme-integrations = { path = "../myme-integrations" }

# JWT generation
jsonwebtoken = "9"
serde_json = "1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[lib]
crate-type = ["staticlib", "cdylib"]
